--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "uuid": "^11.0.5",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
   }
